--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,13 @@
                 "beforeLineComment": true
             }
         ],
+        "no-unused-expressions": [
+            "error",
+            {
+                "allowShortCircuit": true,
+                "allowTernary": true
+            }
+        ],
         "prettier/prettier": [
             "error",
             {
