--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "npm": "^8.11.0"
   }
 }
