--- a/exercises/59 - Slider/package.json
+++ b/exercises/59 - Slider/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.1",
     "sass": "^1.23.3"
   },
   "dependencies": {
-    "parcel": "2.0.1"
+    "parcel": "2.0.1",
+    "parcel-bundler": "^1.12.5"
   }
 }
